# AI_research_LAB_op

./: .env.example  .gitignore  CODEX_INSTRUCTIONS.md  Dockerfile  PROJECT_SPEC.md  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: routes_articles.py  routes_claims.py  routes_entities.py  routes_events.py  routes_facts.py  routes_issues.py  routes_reports.py  routes_review.py  routes_sources.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/llm/: __init__.py  guardrails.py  provider.py  response_parser.py
backend/app/models/: __init__.py  article.py  audit_log.py  claim.py  entity.py  enums.py  event.py  fact.py  issue.py  mention.py  perspective.py  report.py  review.py  source.py
backend/app/schemas/: article_schema.py  entity_schema.py  extraction_schema.py  research_schema.py
backend/app/tests/: conftest.py  test_phase0_health.py  test_phase11_12_reports_review.py  test_phase1_articles.py  test_phase2_cleaner.py  test_phase3_llm.py  test_phase4_mentions.py  test_phase5_linking.py  test_phase6_facts_claims.py  test_phase7_verification.py  test_phase8_event_issue.py  test_phase9_10_analysis_integrity.py  test_testdata_fixtures.py
backend/app/workers/: celery_app.py
backend/scripts/: collect_test_articles.py  seed_entities.py
docs/: CHANGELOG.md  PHASE_GOALS.md  PROGRESS.md  SPEC_ALIGNMENT_REVIEW.md
tests/golden_articles/: ai_capex_001.json  entity_ambiguous_samsung_001.json  regulation_001.json  rss_collected.json
(+25 files in other folders)
